--- a/FrontLinkSDKTestApp/Base.lproj/Main.storyboard
+++ b/FrontLinkSDKTestApp/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hAg-bA-QDC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hAg-bA-QDC">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -12,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="W8r-M3-c6H">
             <objects>
-                <viewController id="hAg-bA-QDC" customClass="ViewController" customModule="FrontSDKTestApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hAg-bA-QDC" customClass="ViewController" customModule="FrontLinkSDKTestApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YKq-NM-iuM">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -20,24 +19,22 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xNy-2T-EUf">
                                 <rect key="frame" x="96.666666666666686" y="384.66666666666669" width="200" height="108"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hix-gx-soz">
+                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hix-gx-soz">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="44"/>
-                                        <color key="backgroundColor" name="PrimaryRed"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="4iS-Ta-NzC"/>
                                             <constraint firstAttribute="width" constant="200" id="mQ1-ZH-bzi"/>
                                         </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="SwiftUI"/>
                                         <connections>
                                             <action selector="swiftUIFlow:" destination="hAg-bA-QDC" eventType="touchUpInside" id="7aF-FD-Thp"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iL8-Ff-QCZ">
+                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iL8-Ff-QCZ">
                                         <rect key="frame" x="0.0" y="64" width="200" height="44"/>
-                                        <color key="backgroundColor" name="PrimaryLightBlue"/>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="UIKit"/>
                                         <connections>
@@ -49,15 +46,38 @@
                                     <constraint firstItem="iL8-Ff-QCZ" firstAttribute="height" secondItem="hix-gx-soz" secondAttribute="height" id="ZAl-P8-Khd"/>
                                 </constraints>
                             </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Catalog Link" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="LLr-Ac-UgA">
+                                <rect key="frame" x="30" y="117" width="333" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="URL" textContentType="url"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="front_title_logo" translatesAutoresizingMaskIntoConstraints="NO" id="PZX-fH-sEQ">
+                                <rect key="frame" x="145.66666666666666" y="79" width="102" height="18"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eMJ-jg-FAY"/>
-                        <color key="backgroundColor" name="Background"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="eMJ-jg-FAY" firstAttribute="trailing" secondItem="LLr-Ac-UgA" secondAttribute="trailing" constant="30" id="82j-fC-qin"/>
                             <constraint firstItem="xNy-2T-EUf" firstAttribute="centerY" secondItem="eMJ-jg-FAY" secondAttribute="centerY" id="Rrk-QF-dH2"/>
+                            <constraint firstItem="LLr-Ac-UgA" firstAttribute="top" secondItem="PZX-fH-sEQ" secondAttribute="bottom" constant="20" id="SZe-Ue-5yE"/>
+                            <constraint firstItem="LLr-Ac-UgA" firstAttribute="leading" secondItem="eMJ-jg-FAY" secondAttribute="leading" constant="30" id="lKe-2b-o4y"/>
                             <constraint firstItem="xNy-2T-EUf" firstAttribute="centerX" secondItem="eMJ-jg-FAY" secondAttribute="centerX" id="lQF-je-H70"/>
+                            <constraint firstItem="PZX-fH-sEQ" firstAttribute="centerX" secondItem="YKq-NM-iuM" secondAttribute="centerX" id="n5W-9w-e9S"/>
+                            <constraint firstItem="PZX-fH-sEQ" firstAttribute="top" secondItem="eMJ-jg-FAY" secondAttribute="top" constant="20" id="qMN-ki-UNB"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0Fo-G1-xX6"/>
+                    <connections>
+                        <outlet property="catalogLinkTextField" destination="LLr-Ac-UgA" id="ZKH-la-dUw"/>
+                        <outlet property="swiftUIButton" destination="hix-gx-soz" id="Z6J-LQ-b0Y"/>
+                        <outlet property="uiKitButton" destination="iL8-Ff-QCZ" id="Ltn-QS-FkB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2YN-Ge-NEc" sceneMemberID="firstResponder"/>
             </objects>
@@ -65,14 +85,6 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="Background">
-            <color red="0.094117647058823528" green="0.094117647058823528" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="PrimaryLightBlue">
-            <color red="0.19215686274509805" green="0.58431372549019611" blue="0.83137254901960789" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="PrimaryRed">
-            <color red="0.91764705882352937" green="0.3411764705882353" blue="0.36078431372549019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="front_title_logo" width="102" height="18"/>
     </resources>
 </document>
